Added script to auto populate site list
I'm using VueJS now to auto populate the site list in the about page

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "http://onigirionegai.info/~onigiri"
+baseURL = "http://onigirionegai.info/"
 title = "Onigiri☆Onegai"
 theme = "hugo-geekblog"
 
